# citOLCCore

./: CMakeLists.txt  README.md
include/: citOLCCore.hpp
src/: citOLCCore.cpp
